# PrimeWorldEditor

./: .gitignore  CMakeLists.txt  dewfile.json  dewfile.refs.json  requirements.txt
src/: CodeStyle.txt
src/Core/: CMakeLists.txt  Core.pro
src/Core/GameProject/: CAssetNameMap.cpp  CGameExporter.cpp  CGameExporter.h  CGameProject.cpp  COpeningBanner.cpp  CResourceStore.cpp  CVirtualDirectory.cpp
src/Core/Render/: CDrawUtil.h
src/Core/Resource/: CMaterial.h  CMayaSpline.cpp  CMayaSpline.h  ETevEnums.h
src/Core/Resource/Animation/: CAnimation.cpp  CSkeleton.cpp
src/Core/Resource/Factory/: CAreaLoader.cpp  CMaterialLoader.cpp  CModelLoader.cpp  CStringLoader.cpp
src/Core/Resource/Script/: CScriptTemplate.cpp  CScriptTemplate.h  NGameList.cpp
src/Core/Resource/Script/Property/: CEnumProperty.h  CPropertyNameGenerator.cpp  IProperty.cpp  IProperty.h  TPropertyRef.h
src/Core/Scene/: CScriptNode.h
src/Core/ScriptExtra/: CDamageableTriggerExtra.h
src/Editor/: CExportGameDialog.cpp  CMakeLists.txt  CProjectSettingsDialog.cpp  UICommon.cpp  UICommon.h  main.cpp
src/Editor/ResourceBrowser/: CResourceBrowser.cpp
src/Editor/WorldEditor/: CWorldEditor.cpp
src/Math/: CVector2f.cpp
